# grove

./: Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  contributing.md  how-it-works.md  installation.md  introduction.md  shell-integration.md
docs/src/reference/: commands.md  configuration.md  frecency.md  layout.md
docs/src/usage/: clone.md  open.md  repos.md  sessions.md  worktrees.md
src/: cli.rs  config.rs  git.rs  main.rs  multiplexer.rs  tmux.rs  zellij.rs
src/cmd/: clone.rs  completions.rs  config.rs  init.rs  mod.rs  open.rs  repo.rs  session.rs  tree.rs
src/db/: mod.rs  repo.rs
src/shell/: mod.rs
templates/: layout.kdl  tmux.sh  zellij.kdl
